sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:12: error: not found: value taille
    retourne(taille)
             ^BasicPancake:23: error: not found: value N
  for (cpt <- 0 to taille - 1 - N){
                                ^